Pom update to prevent jacoco crashes

--- a/src/main/java/com/irurueta/numerical/build-info.properties
+++ b/src/main/java/com/irurueta/numerical/build-info.properties
@@ -1,5 +1,5 @@
-#Sun Jul 02 02:40:38 CEST 2017
+#Wed Nov 22 12:06:24 CET 2017
 ARTIFACT_ID=irurueta-numerical
-GROUP_ID=com.irurueta
+BUILD_TIMESTAMP=17-11-22 12\:06\:24
 VERSION=1.0-SNAPSHOT
-BUILD_TIMESTAMP=17-07-02 02\:40\:38
+GROUP_ID=com.irurueta
