fixed an issue on PROMedS estimator that prevented getting inlier data in some cases updated pom

--- a/src/main/resources/com/irurueta/numerical/build-info.properties
+++ b/src/main/resources/com/irurueta/numerical/build-info.properties
@@ -1,5 +1,5 @@
-#Tue Nov 28 11:24:08 CET 2017
+#Tue Aug 07 22:37:22 CEST 2018
 ARTIFACT_ID=irurueta-numerical
-BUILD_TIMESTAMP=17-11-28 11\:24\:08
+BUILD_TIMESTAMP=18-08-07 22\:37\:22
 VERSION=1.0-SNAPSHOT
 GROUP_ID=com.irurueta
