--- a/src/main/resources/com/irurueta/numerical/build-info.properties
+++ b/src/main/resources/com/irurueta/numerical/build-info.properties
@@ -1,5 +1,5 @@
-#Wed Oct 24 16:52:04 CEST 2018
+#Sat Nov 10 14:59:30 CET 2018
 ARTIFACT_ID=irurueta-numerical
-BUILD_TIMESTAMP=18-10-24 16\:52\:04
+BUILD_TIMESTAMP=18-11-10 14\:59\:30
 VERSION=1.0-SNAPSHOT
 GROUP_ID=com.irurueta
