--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ addons:
 
 #add: -Denvironment=test to activate CI profile to publish into gh-pages
 script:
-- travis_wait 80 mvn clean jacoco:prepare-agent install jacoco:report coveralls:report site -Denvironment=test -P !build-extras
+- travis_wait 50 mvn clean jacoco:prepare-agent install jacoco:report coveralls:report -Denvironment=test -P !build-extras
+- travis_wait 50 mvn site -Denvironment=test -P !build-extras
 - sonar-scanner
 
 cache:
