--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@ mvn -s s3-settings.xml clean test site deploy site-deploy
             <build>
                 <plugins>
                     <!-- publishes site report to github gh-pages branch -->
-                    <plugin>
+                    <!--<plugin>
                         <groupId>com.github.github</groupId>
                         <artifactId>site-maven-plugin</artifactId>
                         <version>0.12</version>
@@ -113,7 +113,7 @@ mvn -s s3-settings.xml clean test site deploy site-deploy
                                 <phase>site</phase>
                             </execution>
                         </executions>
-                    </plugin>
+                    </plugin>-->
 
                     <!-- publishes coverage info to coveralls -->
                     <plugin>
