--- a/src/main/resources/com/irurueta/numerical/build-info.properties
+++ b/src/main/resources/com/irurueta/numerical/build-info.properties
@@ -1,5 +1,5 @@
-#Thu Dec 06 00:48:05 CET 2018
+#Thu Oct 15 20:10:02 CEST 2020
 ARTIFACT_ID=irurueta-numerical
-BUILD_TIMESTAMP=18-12-06 00\:48\:05
+BUILD_TIMESTAMP=20-10-15 20\:10\:02
 VERSION=1.0-SNAPSHOT
 GROUP_ID=com.irurueta
