--- a/src/main/resources/com/irurueta/numerical/build-info.properties
+++ b/src/main/resources/com/irurueta/numerical/build-info.properties
@@ -1,5 +1,5 @@
-#Thu Oct 15 20:10:02 CEST 2020
+#Sat Jan 09 14:26:37 CET 2021
 ARTIFACT_ID=irurueta-numerical
-BUILD_TIMESTAMP=20-10-15 20\:10\:02
+BUILD_TIMESTAMP=21-01-09 14\:26\:37
 VERSION=1.0-SNAPSHOT
 GROUP_ID=com.irurueta
