--- a/src/main/resources/com/irurueta/numerical/build-info.properties
+++ b/src/main/resources/com/irurueta/numerical/build-info.properties
@@ -1,5 +1,5 @@
-#Wed Feb 17 13:38:49 CET 2021
+#Sun Mar 28 13:31:31 CEST 2021
 ARTIFACT_ID=irurueta-numerical
-BUILD_TIMESTAMP=21-02-17 13\:38\:49
+BUILD_TIMESTAMP=21-03-28 13\:31\:30
 VERSION=1.0-SNAPSHOT
 GROUP_ID=com.irurueta
