--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,8 @@
 sonar.projectKey=albertoirurueta_irurueta-numerical
-sonar.sources=src/main/java
+sonar.projectName=irurueta-numerical
+sonar.projectVersion=1.0-SNAPSHOT
 sonar.language=java
-sonar.java.binaries=target/classes/**
 sonar.java.source=1.7
+sonar.sources=./src/main/java
+sonar.tests=./src/test/java
+sonar.java.binaries=./target/classes/**
