--- a/src/main/resources/com/irurueta/numerical/build-info.properties
+++ b/src/main/resources/com/irurueta/numerical/build-info.properties
@@ -1,5 +1,5 @@
-#Tue Jun 29 18:49:28 CEST 2021
+#Mon Nov 29 23:49:53 CET 2021
 ARTIFACT_ID=irurueta-numerical
-BUILD_TIMESTAMP=21-06-29 18\:49\:27
+BUILD_TIMESTAMP=21-11-29 23\:49\:53
 VERSION=1.0-SNAPSHOT
 GROUP_ID=com.irurueta
