--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <artifactId>irurueta-numerical</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Numerical utilities</description>
     <url>https://github.com/albertoirurueta/irurueta-numerical</url>
     <inceptionYear>2017</inceptionYear>
-
     <licenses>
         <license>
             <name>The Apache License, Version 2.0</name>
@@ -49,32 +49,32 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>4.13.2</version>
             <scope>test</scope>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
+            <version>2.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.irurueta</groupId>
             <artifactId>irurueta-statistics</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.irurueta</groupId>
             <artifactId>irurueta-sorting</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.irurueta</groupId>
             <artifactId>irurueta-algebra</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0</version>
             <scope>compile</scope>
         </dependency>        
     </dependencies>
@@ -94,7 +94,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>3.0.1</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -288,6 +288,7 @@
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                     <keepStagingRepositoryOnFailure>true</keepStagingRepositoryOnFailure>
                     <stagingProgressTimeoutMinutes>30</stagingProgressTimeoutMinutes>
+                    <stagingProfileId>${env.SONATYPE_STAGING_PROFILE_ID}</stagingProfileId>
                 </configuration>
             </plugin>
         </plugins>
