--- a/src/main/resources/com/irurueta/numerical/build-info.properties
+++ b/src/main/resources/com/irurueta/numerical/build-info.properties
@@ -1,5 +1,5 @@
-#Mon Sep 22 10:02:04 CEST 2025
+#Wed Dec 17 23:20:47 CET 2025
 ARTIFACT_ID=irurueta-numerical
-BUILD_TIMESTAMP=25-09-22 10\:02\:04
+BUILD_TIMESTAMP=25-12-17 23\:20\:47
 VERSION=1.4.0-SNAPSHOT
 GROUP_ID=com.irurueta
